# Life-Is-Strange-Bot

./: .gitignore  Config.py  LiSBot.py  README.md  pyproject.toml  requirements.txt
BotFiles/: error.txt  service_account_secret.json
Cogs/: Admin.py  BotStuff.py  Fanfic.py  General.py  Image.py  Images.py  Life Is Strange.py  Miscellaneous.py  Other.py  Radio.py  Trivia.py
Helpers/Games/: Anagram.py  Connect4.py  Hangman.py  Sokoban.py  TicTacToe.py
Helpers/Managers/: DatabaseManager.py  GameManager.py  SearchQuoteManager.py
Helpers/Utils/: Listener.py  Paginator.py  Restrictor.py  Tasks.py  Utils.py
Resources/: channelIDs.txt  choices.json  choices.txt  lisBot.db  trivia.json  trivia.txt  triviaScores.db
Resources/Files/: channelIDs.json  historyEvents.json  lisWords.txt  questions.txt  radioLines.txt  trivia.json
TextFiles/: AMA.txt  IDs.txt  questions.txt  trivia.txt
Utils/: Connect4.py  GameManager.py  Hangman.py  Paginator.py  Restrictor.py  SearchQuoteManager.py  TicTacToe.py  Utils.py
lis_bot/: __main__.py
lis_bot/cogs/: admin.py  fanfic.py  life_is_strange.py  miscellaneous.py
lis_bot/helpers/managers/: database_manager.py  search_quote_manager.py
lis_bot/helpers/utils/: paginator.py  restrictor.py  utils.py
lis_bot/resources/files/: gunLines.txt  ignoreFics.txt  questions.txt  trivia.json
src/lis_bot/: __main__.py
src/lis_bot/cogs/: admin.py  fanfic.py  life_is_strange.py  miscellaneous.py
src/lis_bot/helpers/managers/: database_manager.py  search_quote_manager.py
src/lis_bot/helpers/utils/: paginator.py  restrictor.py  utils.py
(+1 files in other folders)
